store controller index

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </section>
     <section id="controller-connected-area">
         <div id="controller-connected" class="controller-status">Connected</div>
-        <div id="rumble-on-button-press-area">
+        <div id="rumble-on-button-press-area" class="center">
             <input id="rumble-on-button-press" type="checkbox" />
             <label for="rumble-on-button-press">Rumble on button press</label>
         </div>
